--- a/Desktop/resort/css/styles.css
+++ b/Desktop/resort/css/styles.css
@@ -9,31 +9,31 @@ h2 {
   
 }
 
-h2 {
-  color: darkgreen;
-  text-align: left;
-  
-
-
-h2 {
-  color: darkgreen;
-  text-align: left;
-  
 }
 h3 {
   color: darkgreen;
   text-align: left;
   
 }
+
 h4 {
   color: darkgreen;
   text-align: left;
   
 }
+
+h5 {
+  color: darkgreen;
+  text-align: left;
+  
+}
+
 p {
   color: green;
   font-family: sans-serif;
   text-align: center;
+  font-size: 20px;
+  line-height: 10px;
 }
 
 ul {
