--- a/Desktop/resort/css/styles.css
+++ b/Desktop/resort/css/styles.css
@@ -1,42 +1,36 @@
 h1 {
-  color: darkgreen;
-  text-align: left;
-}
-
-h2 {
-  color: darkgreen;
-  text-align: left;
-  
-}
-
-h2 {
-  color: darkgreen;
-  text-align: left;
-  
-
-
-h2 {
-  color: darkgreen;
-  text-align: left;
-  
-}
-h3 {
-  color: darkgreen;
-  text-align: left;
-  
-}
-h4 {
-  color: darkgreen;
-  text-align: left;
-  
-}
-p {
-  color: green;
-  font-family: sans-serif;
+  color: navy;
   text-align: center;
 }
 
-ul {
-  font-size: 40px;
-  line-height: 30px;
+h2 {
+  font-style: italic;
+  text-align: center;
+  color: darkblue;
+}
+
+h3 {
+  font-style: italic;
+  text-align: center;
+  color: darkblue;
+}
+
+h4 {
+  font-style: italic;
+  text-align: center;
+  color: darkblue;
+}
+
+h5 {
+  font-style: italic;
+  text-align: center;
+  color: darkblue;
+}
+
+p {
+  color: blue;
+}
+
+body {
+  background-color: lightblue;
 }
