--- a/Desktop/resort/css/styles.css
+++ b/Desktop/resort/css/styles.css
@@ -1,36 +1,36 @@
 h1 {
-  color: navy;
+  color: forestgreen;
   text-align: center;
 }
 
 h2 {
   font-style: italic;
   text-align: center;
-  color: darkblue;
+  color: darkgreen;
 }
 
 h3 {
   font-style: italic;
   text-align: center;
-  color: darkblue;
+  color: darkgreen;
 }
 
 h4 {
   font-style: italic;
   text-align: center;
-  color: darkblue;
+  color: darkgreen;
 }
 
 h5 {
   font-style: italic;
   text-align: center;
-  color: darkblue;
+  color: darkgreen;
 }
 
 p {
-  color: blue;
+  color: green;
 }
 
 body {
-  background-color: lightblue;
+  background-color: lightgreen;
 }
